 * Removed reahl-bzrsupport as it is not used anymore and simplified other changes.
 * Changed shelltools to use argparse instead of optparse.
 * Changed XMLReader to use a passed list of classes instead of discovering them from an entrypoint.
 * Moved prodshell commands into a new component reahl-commands.
 * Upgraded sqlalchemy to 1.2.0
 * Upgraded alembic to 0.9.6

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 16 Jan 2018 08:47:00 +0200


python-reahl (3.2.0) unstable; urgency=low

 * Added auto restart for the reahl dev webserver on filesystem changes (blueprint: reahl-serve-with-auto-reload).
 * Added support for Bootstrap 4 alpha 2 Widgets and Layouts (blueprint: bootstrap)
 * Dropped support for elixir.
 * Changed versions of Jquery to 1.11.2 and jquery-blockUI to 2.70.0.
 * Changed Browser/WidgetTester Hierarchy so get_html/get_inner_html can be used on WidgetTester too.
 * Changed xpath() on BasicBrowser to be able to deal with an XPath instance.
 * Added support for del_ methods on Fixtures to tear down singleton instances created with corresponding new_ methods.
 * Changed Label to subsume what was done by InputLabel previously.
 * Introduced the InternalRedirect concept and functionality to replay_request for a MethodResult.
 * Refactored Input hierarchy to be able to model WrappedInputs and other types of Inputs better.
 * Changed Menu and MenuItems to not BE Ul, Li, but HTMLWidgets with a separate html_representation.
 * Added locale kwarg to Bookmark constructor.
 * Changed reahl script to NOT override python's default behaviour re showing deprecation warnings.
 * Changed PageMenu to be an HTMLWidget, not a Menu.
 * Added menu_layout kwarg to PageMenu for laying out the Menu it contains.
 * Changed how submenus are added to menus: you now call add_submenu instead of having to know about SubMenu class.
 * Changed how Menus are created: don't use from_xxx methods, rather use with_xxx after construction.