@@ -38,6 +38,7 @@ python-reahl (4.0.0a1) unstable; urgency=low
  * Moved prodshell commands into a new component reahl-commands.
  * Upgraded sqlalchemy to 1.2.0
  * Upgraded alembic to 0.9.6
+ * Added min_length and max_length kwargs for convenience to Field.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 16 Jan 2018 08:47:00 +0200
 
